--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,7 +14,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Jocelyn Ma's personal website'
+    description: Jocelyn Ma's personal website
     twitter: ''
   analytics:
     google_analytics: ''
