--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -15,7 +15,7 @@ marketing:
     local_business_type: ''
     org_name: ''
     description: Jocelyn Ma's personal website
-    twitter: ''
+    twitter: 'GetResearchDev'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
